workspace-sf/force-app/main/default/objects/ProdutoCanal__c/ProdutoCanal__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre o canal e o produto</description>
    <label>Produto do canal</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos do canal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>