workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/CanalDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CanalDistribuicao__c</fullName>
    <label>Canal de distribuição</label>
    <referenceTo>CanalDistribuicao__c</referenceTo>
    <relationshipLabel>Produtos do canal</relationshipLabel>
    <relationshipName>ProdutosCanal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>