workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/CarenciaMesesRecuperacao__c.field-meta.xml
<CustomField>
    <fullName>CarenciaMesesRecuperacao__c</fullName>
    <label>Carência em meses de recuperação</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>