workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/DocumentosNaoNecessariosEntrada__c.field-meta.xml
<CustomField>
    <fullName>DocumentosNaoNecessariosEntrada__c</fullName>
    <label>Documentos não necessários de entrada</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Documentos</valueSetName>
    </valueSet>
</CustomField>