workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/LimiteMaximoRecuperacao__c.field-meta.xml
<CustomField>
    <fullName>LimiteMaximoRecuperacao__c</fullName>
    <label>Limite máximo de recuperação</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>