workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/LimiteMeioComercializacao__c.field-meta.xml
<CustomField>
    <fullName>LimiteMeioComercializacao__c</fullName>
    <label>Limite do meio de comercialização</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>