workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/LimiteMinimoRecuperacao__c.field-meta.xml
<CustomField>
    <fullName>LimiteMinimoRecuperacao__c</fullName>
    <label>Limite mínimo de recuperação</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>