workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/Momento__c.field-meta.xml
<CustomField>
    <fullName>Momento__c</fullName>
    <label>Momento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Endosso</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
            <value>
                <fullName>Demais renovações</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>