workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/MomentoRemuneracao__c.field-meta.xml
<CustomField>
    <fullName>MomentoRemuneracao__c</fullName>
    <label>Momento de remuneração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>À cada &apos;x&apos; parcelas</fullName>
            </value>
            <value>
                <fullName>Após o pagamento da parcela</fullName>
            </value>
            <value>
                <fullName>Emissão da Apólice</fullName>
            </value>
            <value>
                <fullName>Protocolo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>