workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/Parcelamento__c.field-meta.xml
<CustomField>
    <fullName>Parcelamento__c</fullName>
    <label>Parcelamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% da 1º parcela</fullName>
            </value>
            <value>
                <fullName>100% Parcelado</fullName>
            </value>
            <value>
                <fullName>Recebimento do prêmio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>