workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/PercentualDescontoMaximo__c.field-meta.xml
<CustomField>
    <fullName>PercentualDescontoMaximo__c</fullName>
    <label>Percentual de Desconto Máximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>