workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <inlineHelpText>Informado quando o momento for A cada &apos;x&apos; parcelas</inlineHelpText>
    <label>Período</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>