workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/Recuperacao__c.field-meta.xml
<CustomField>
    <fullName>Recuperacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recuperação?</label>
    <type>Checkbox</type>
</CustomField>