workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/RetencaoPrimeiraRenovacao__c.field-meta.xml
<CustomField>
    <fullName>RetencaoPrimeiraRenovacao__c</fullName>
    <label>Retenção 1º renovação</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>