workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/RetencaoSegundaRenovacao__c.field-meta.xml
<CustomField>
    <fullName>RetencaoSegundaRenovacao__c</fullName>
    <label>Retenção 2º renovação</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>