workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/RetencaoSeguroNovo__c.field-meta.xml
<CustomField>
    <fullName>RetencaoSeguroNovo__c</fullName>
    <label>Retenção seguro novo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>