workspace-sf/force-app/main/default/objects/ProdutoCanal__c/fields/RetencaoTerceiraRenovacao__c.field-meta.xml
<CustomField>
    <fullName>RetencaoTerceiraRenovacao__c</fullName>
    <label>Retenção 3º renovação</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>