workspace-sf/force-app/main/default/objects/ProdutoCanal__c/validationRules/ObrigarPreenchimentoVariavel.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoVariavel</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(ModeloRemuneracao__c,&apos;Percentual&apos;),
    ISPICKVAL(Variavel__c,&apos;&apos;)
)</errorConditionFormula>
    <errorMessage>O campo variável é obrigatório para este modelo de remuneração</errorMessage>
</ValidationRule>