workspace-sf/force-app/main/default/objects/ProdutoCanal__c/validationRules/ValidaDescontoCanal.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaDescontoCanal</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Produto__r.RecordType.DeveloperName = &apos;ProdutoComercial&apos;, 
IF(Produto__r.PercentualDescontoMaximo__c &gt; PercentualDescontoMaximo__c , true, false), false)</errorConditionFormula>
    <errorMessage>Percentual de desconto informado não pode ser maior que o percentual de desconto informado no produto.</errorMessage>
</ValidationRule>