workspace-sf/force-app/main/default/objects/ProdutoCanal__c/validationRules/ValidarMomentoEmissaoApolice.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarMomentoEmissaoApolice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(MomentoRemuneracao__c,&apos;Emissão da apólice&apos;),
    ISPICKVAL(Parcelamento__c,&apos;Recebimento do prêmio&apos;)
)</errorConditionFormula>
    <errorMessage>Opção de parcelamento inválida para o momento de remuneração escolhido</errorMessage>
</ValidationRule>