workspace-sf/force-app/main/default/objects/ProdutoCanal__c/validationRules/ValidarRecuperacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarRecuperacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Recuperacao__c = TRUE,
  AND(
    ISBLANK(CarenciaMesesRecuperacao__c),
    ISBLANK(LimiteMinimoRecuperacao__c),
    ISBLANK(LimiteMaximoRecuperacao__c)
  )
)</errorConditionFormula>
    <errorMessage>Campos obrigatórios Competência da recuperação, Limites de recuperação mínimo e máximo.</errorMessage>
</ValidationRule>